--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,75 +3,68 @@ layout: default
 ---
 
 <!-- about.html -->
-<div class="post">
-  <header class="post-header">
-    <h1 class="post-title">
-     {% if site.title == "blank" -%}
-       <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}
-     {%- else -%}
-       {{ site.title }}
-     {%- endif %}
-    </h1>
-    <p class="desc">{{ page.subtitle }}</p>
-  </header>
+      <div class="post">
+        <header class="post-header">
+          <h1 class="post-title">
+           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
+          </h1>
+          <p class="desc">{{ page.subtitle }}</p>
+        </header>
 
-  <article class="profile-content">
-    {% if page.profile -%}
-    <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
-      {%- if page.profile.image %}
-        {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
-        {% if page.profile.image_circular %}
-          {%- assign profile_image_class = "img-fluid z-depth-1 rounded-circle" -%}
-        {% else %}
-          {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
-        {% endif %}
-        {% include figure.html
-        path=profile_image_path
-        class=profile_image_class
-        alt=page.profile.image -%}
-      {% endif -%}
-      {%- if page.profile.address %}
-      <div class="address">
-        {{ page.profile.address }}
-      </div>
-      {%- endif %}
-    </div>
-    {%- endif %}
+        <article>
+          {% if page.profile -%}
+          <div class="profile float-{%- if page.profile.align == 'left' -%}left{%- else -%}right{%- endif -%}">
+            {%- if page.profile.image %}
+              {%- assign profile_image_path = page.profile.image | prepend: 'assets/img/' -%}
 
-    <!-- News Section -->
-    {% if page.news -%}
-      <div class="news-section">
-        <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
-        {%- include news.html %}
-      </div>
-    {%- endif %}
+              {% if page.profile.image_circular %}
+                {%- assign profile_image_class = "img-fluid z-depth-1 rounded-circle" -%}
+              {% else %}
+                {%- assign profile_image_class = "img-fluid z-depth-1 rounded" -%}
+              {% endif %}
 
-    <!-- Clearfix for floating elements -->
-    <div class="clearfix"></div>
-  </article>
+              {% include figure.html
+              path=profile_image_path
+              class=profile_image_class
+              alt=page.profile.image -%}
+            {% endif -%}
+            {%- if page.profile.address %}
+            <div class="address">
+              {{ page.profile.address }}
+            </div>
+            {%- endif %}
+          </div>
+          {%- endif %}
 
-  <!-- Content of the page -->
-  <div class="page-content">
-    {{ content }}
-  </div>
+          <div class="clearfix">
+            {{ content }}
+          </div>
 
-  <!-- Selected papers -->
-  {% if page.selected_papers -%}
-    <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
-    {%- include selected_papers.html %}
-  {%- endif %}
+          <!-- News -->
+          {% if page.news -%}
+            <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
+            {%- include news.html %}
+          {%- endif %}
 
-  <!-- Social -->
-  {%- if page.social %}
-    <div class="social">
-      <div class="contact-icons">
-        {% include social.html %}
-      </div>
+          <!-- Selected papers -->
+          {% if page.selected_papers -%}
+            <h2><a href="{{ '/publications/' | relative_url }}" style="color: inherit;">selected publications</a></h2>
+            {%- include selected_papers.html %}
+          {%- endif %}
 
-      <div class="contact-note">
-        {{ site.contact_note }}
-      </div>
+          <!-- Social -->
+          {%- if page.social %}
+            <div class="social">
+              <div class="contact-icons">
+                {% include social.html %}
+              </div>
 
-    </div>
-  {%- endif %}
+              <div class="contact-note">
+                {{ site.contact_note }}
+              </div>
+
+            </div>
+          {%- endif %}
+        </article>
+
 </div>
