--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -19,7 +19,8 @@ layout: default
                       {% for content in entry.contents %}
                         {% if content.name == "publications" %}
                           <!-- Custom handling for publications -->
-                          <a href="{{ content.value | relative_url }}" class="btn btn-primary">View Publications</a>
+                          <p><strong>{{ content.name }}:</strong> {{ content.value | relative_url}}</p>
+                          <!-- <a href="{{ content.value | relative_url }}" class="btn btn-primary">View Publications</a> -->
                         {% else %}
                           <p><strong>{{ content.name }}:</strong> {{ content.value }}</p>
                         {% endif %}
