--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -24,7 +24,7 @@ layout: default
                         {% elsif content.name == "Frameworks & Tools" %}
                         <p>
                           <strong>{{ content.name }}:</strong>
-                          Python <i class="fa fa-python"></i>,
+                          Python <i class="fab fa-python"></i>,
                           PyTorch <i class="fa fa-fire"></i>,
                           PyG,
                           Tensorflow,
@@ -33,8 +33,8 @@ layout: default
                           AWS <i class="fa fa-cloud"></i>,
                           MATLAB,
                           Julia,
-                          Git <i class="fa fa-git-square"></i>,
-                          C, 
+                          Git <i class="fab fa-git"></i>,
+                          C,
                           C++,
                           GIS
                         </p>
