--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -33,7 +33,7 @@ layout: default
                           AWS <i class="fa fa-cloud"></i>,
                           MATLAB,
                           Julia,
-                          Git <i class="fab fa-git-square"></i>,
+                          <i class="fab fa-git"></i>,
                           C,
                           C++,
                           GIS
