--- a/_layouts/cv.html
+++ b/_layouts/cv.html
@@ -30,7 +30,7 @@ layout: default
                           Tensorflow,
                           Streamlit,
                           SQL <i class="fa fa-database"></i>,
-                          AWS <i class="fa fa-aws"></i>,
+                          AWS <i class="fa fa-cloud"></i>,
                           MATLAB,
                           Julia,
                           <i class="fab fa-git"></i>,
