--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,10 +33,11 @@ body.sticky-bottom-footer {
   }
 }
 
-.news{
-  width: 70%; /* Set your desired width */
-  max-width: 100%; /* To ensure it doesn't overflow its container */
+.table-responsive {
+  max-height: 500px; /* or any other value you want */
+  overflow-y: auto; /* to add a scrollbar when the content overflows */
 }
+
 
 // TODO: redefine content layout.
 /******************************************************************************
