--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -33,11 +33,11 @@ body.sticky-bottom-footer {
   }
 }
 
-.table-responsive {
-  max-height: 500px; /* or any other value you want */
-  overflow-y: auto; /* to add a scrollbar when the content overflows */
-}
 
+//.table-responsive {
+//  max-height: 500px; /* or any other value you want */
+//  overflow-y: auto; /* to add a scrollbar when the content overflows */
+//}
 
 // TODO: redefine content layout.
 /******************************************************************************
