add visitor count

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,7 +32,7 @@
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
     {% include scripts/progressBar.html %}
-    <script src="{{ '/assets/js/countapi.js' | relative_url }}"></script>
+    <script src="{{ '../assets/js/countapi.js' | relative_url }}"></script>
 
   </body>
 </html>
