--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,6 +44,8 @@ layout: default
           {% if page.news -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
             {%- include news.html %}
+            <div id="visits">Page views: loading...</div>
+
           {%- endif %}
 
           <!-- Selected papers -->
