add visitor count

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,7 +44,7 @@ layout: default
           {% if page.news -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
             {%- include news.html %}
-            <div id="visits">views.</div>
+            {% include scripts/countapi.html %}
 
           {%- endif %}
 
