add visitor count

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -45,6 +45,8 @@ layout: default
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
             {%- include news.html %}
             {% include scripts/countapi.html %}
+            <div id="visits">Page views: 0</div>
+
 
           {%- endif %}
 
