--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -44,8 +44,7 @@ layout: default
           {% if page.news -%}
             <h2><a href="{{ '/news/' | relative_url }}" style="color: inherit;">news</a></h2>
             {%- include news.html %}
-            {% include scripts/countapi.html %}
-            <div id="visits">Page views: 0</div>
+            <div id="visits">Page views: ?</div>
 
 
           {%- endif %}
