add visitor count

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,6 +32,6 @@
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
     {% include scripts/progressBar.html %}
-    {% include scripts/countapi.html %}
+    <script src="{{ '/assets/js/countapi.js' | relative_url }}"></script
   </body>
 </html>
