add visitor count

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -35,7 +35,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       $(document).ready(function(){
-          $.getJSON("https://api.countapi.xyz/hit/tadikserhat.com/visits", function(response) {
+          $.getJSON("https://api.countapi.xyz/hit/serhatadik.github.io/visits", function(response) {
               $("#visits").text(`Page views: ${response.value}`);
           });
       });
