--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -32,14 +32,22 @@
     {% include scripts/mathjax.html %}
     {% include scripts/analytics.html %}
     {% include scripts/progressBar.html %}
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <!-- Matomo -->
     <script>
-      $(document).ready(function(){
-          $.getJSON("https://api.countapi.xyz/hit/serhatadik.github.io/visits", function(response) {
-              $("#visits").text(`Page views: ${response.value}`);
-          });
-      });
+      var _paq = window._paq = window._paq || [];
+      /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+      _paq.push(['trackPageView']);
+      _paq.push(['enableLinkTracking']);
+      (function() {
+        var u="https://tadikserhat.matomo.cloud/";
+        _paq.push(['setTrackerUrl', u+'matomo.php']);
+        _paq.push(['setSiteId', '1']);
+        var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+        g.async=true; g.src='https://cdn.matomo.cloud/tadikserhat.matomo.cloud/matomo.js'; s.parentNode.insertBefore(g,s);
+      })();
     </script>
+    <!-- End Matomo Code -->
+
 
   </body>
 </html>
